# hostel-waiting-list-checker-backend

./: .gitignore  pyproject.toml
hostel_waiting_list_checker_backend/: main.py
hostel_waiting_list_checker_backend/app/: api_config.py
hostel_waiting_list_checker_backend/app/routes/: student_router.py
hostel_waiting_list_checker_backend/app/utils/: access_excel.py
